[gd_scene load_steps=15 format=3 uid="uid://gojj7d5ggom5"]

[ext_resource type="Script" uid="uid://bccvoorn3lrib" path="res://scripts/MiniGames/ReforestationLevel4.gd" id="1_d8jg4"]
[ext_resource type="Texture2D" uid="uid://dc5wjvirb5jtd" path="res://assets/items/layers/fundo_arvore03.png" id="2_oplwu"]
[ext_resource type="Texture2D" uid="uid://cg18l2s77bbry" path="res://assets/items/layers/fundo_arvore01.png" id="3_cpu1m"]
[ext_resource type="FontFile" uid="uid://jss3joppgef5" path="res://assets/fonts/lucasarts-scumm-outline.fnt" id="3_k8s3e"]
[ext_resource type="Texture2D" uid="uid://ds0iin0t0tcf" path="res://assets/items/Orange/scaled-at-50/b_No.png" id="3_ndgux"]
[ext_resource type="Texture2D" uid="uid://ulkqwjcm1drr" path="res://assets/items/layers/fundo_arvore02.png" id="4_6fnv3"]
[ext_resource type="Texture2D" uid="uid://cemn0bqsx2kgt" path="res://assets/items/Red/scaled-at-50/b_No.png" id="4_i2p3c"]
[ext_resource type="Texture2D" uid="uid://b8x2fy1imvtyn" path="res://assets/items/Orange/scaled-at-50/b_Forward1.png" id="6_oplwu"]
[ext_resource type="Texture2D" uid="uid://cfctx7evwewdw" path="res://assets/items/Red/scaled-at-50/b_Forward1.png" id="7_cpu1m"]
[ext_resource type="Texture2D" uid="uid://bhyjwcc6qwhih" path="res://assets/items/Orange/scaled-at-50/b_Background.png" id="8_cpu1m"]
[ext_resource type="AudioStream" uid="uid://cjcnqrxa8wkw6" path="res://assets/sounds/051_use_item_01.wav" id="9_6fnv3"]
[ext_resource type="Texture2D" uid="uid://b8qbmqjmc7m1" path="res://assets/items/Red/scaled-at-50/b_Background.png" id="9_dy61o"]
[ext_resource type="AudioStream" uid="uid://bdmf3382te8dp" path="res://assets/sounds/001_Hover_01.wav" id="10_dy61o"]
[ext_resource type="AudioStream" uid="uid://xax3juonscc0" path="res://assets/sounds/game_bg.mp3" id="14_6fnv3"]

[node name="ReforestationLevel4" type="Node2D"]
script = ExtResource("1_d8jg4")

[node name="bottom" type="TextureRect" parent="."]
offset_left = -2.0
offset_top = 7.0
offset_right = 1199.0
offset_bottom = 656.0
texture = ExtResource("2_oplwu")

[node name="middle" type="TextureRect" parent="."]
offset_right = 1156.0
offset_bottom = 657.0
texture = ExtResource("3_cpu1m")

[node name="Top" type="TextureRect" parent="."]
offset_left = -3.0
offset_top = 5.0
offset_right = 1198.0
offset_bottom = 651.0
texture = ExtResource("4_6fnv3")

[node name="CloseButton" type="TextureButton" parent="."]
offset_left = 1060.0
offset_top = 29.0
offset_right = 1129.0
offset_bottom = 97.0
texture_normal = ExtResource("3_ndgux")
texture_pressed = ExtResource("4_i2p3c")
texture_hover = ExtResource("4_i2p3c")
stretch_mode = 0

[node name="Question" type="Label" parent="."]
offset_left = 60.0
offset_top = 119.0
offset_right = 1097.0
offset_bottom = 243.0
theme_override_fonts/font = ExtResource("3_k8s3e")
theme_override_font_sizes/font_size = 70
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="1" type="TextureButton" parent="Question"]
layout_mode = 0
offset_left = 34.0
offset_top = 209.0
offset_right = 115.0
offset_bottom = 281.0
texture_normal = ExtResource("8_cpu1m")
texture_pressed = ExtResource("9_dy61o")
texture_hover = ExtResource("9_dy61o")
stretch_mode = 4

[node name="Label" type="Label" parent="Question/1"]
layout_mode = 0
offset_left = -34.0
offset_top = 127.0
offset_right = 142.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("3_k8s3e")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
autowrap_mode = 3

[node name="2" type="TextureButton" parent="Question"]
layout_mode = 0
offset_left = 275.0
offset_top = 208.0
offset_right = 349.0
offset_bottom = 283.0
texture_normal = ExtResource("8_cpu1m")
texture_pressed = ExtResource("9_dy61o")
texture_hover = ExtResource("9_dy61o")
stretch_mode = 4

[node name="Label" type="Label" parent="Question/2"]
layout_mode = 0
offset_left = -32.0
offset_top = 127.0
offset_right = 138.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("3_k8s3e")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
autowrap_mode = 3

[node name="3" type="TextureButton" parent="Question"]
layout_mode = 0
offset_left = 513.0
offset_top = 211.0
offset_right = 596.0
offset_bottom = 286.0
texture_normal = ExtResource("8_cpu1m")
texture_pressed = ExtResource("9_dy61o")
texture_hover = ExtResource("9_dy61o")
stretch_mode = 4

[node name="Label" type="Label" parent="Question/3"]
layout_mode = 0
offset_left = -22.0
offset_top = 128.0
offset_right = 181.0
offset_bottom = 162.0
theme_override_fonts/font = ExtResource("3_k8s3e")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
autowrap_mode = 3

[node name="4" type="TextureButton" parent="Question"]
layout_mode = 0
offset_left = 769.0
offset_top = 213.0
offset_right = 843.0
offset_bottom = 285.0
texture_normal = ExtResource("8_cpu1m")
texture_pressed = ExtResource("9_dy61o")
texture_hover = ExtResource("9_dy61o")
stretch_mode = 4

[node name="Label" type="Label" parent="Question/4"]
layout_mode = 0
offset_left = -20.0
offset_top = 128.0
offset_right = 136.0
offset_bottom = 162.0
theme_override_fonts/font = ExtResource("3_k8s3e")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
autowrap_mode = 3

[node name="Next" type="TextureButton" parent="Question"]
layout_mode = 0
offset_left = 962.0
offset_top = 374.0
offset_right = 1080.0
offset_bottom = 489.0
texture_normal = ExtResource("6_oplwu")
texture_pressed = ExtResource("7_cpu1m")
texture_hover = ExtResource("7_cpu1m")
stretch_mode = 5

[node name="Feedback" type="Label" parent="Question"]
layout_mode = 0
offset_left = -41.0
offset_top = 408.0
offset_right = 871.0
offset_bottom = 524.0
theme_override_fonts/font = ExtResource("3_k8s3e")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_6fnv3")

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_dy61o")

[node name="Panel" type="Panel" parent="."]
offset_left = -26.0
offset_top = -44.0
offset_right = 1228.0
offset_bottom = 670.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 234.0
offset_top = 158.0
offset_right = 1004.0
offset_bottom = 586.0
theme_override_fonts/font = ExtResource("3_k8s3e")
theme_override_font_sizes/font_size = 40
text = "Welcome to the Reforestation Quiz!  

Answer the questions by clicking on an option.  

Some questions may affect the carbon footprint.  

Click anywhere to start the quiz.
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BG" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_6fnv3")

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
